--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cron": "^3.1.6",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "mongoose": "^8.1.2",
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
     "qrcode-terminal": "^0.12.0",
